--- a/assets/stylesheets/mobile-styles/index.css
+++ b/assets/stylesheets/mobile-styles/index.css
@@ -46,32 +46,7 @@
 
 }
 
-@media (orientation: landscape) and (min-height: 400px) and (max-width: 900px){
-    .hero-section--layout {
-        padding: var(--padding);
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-    
-        display: grid;
-        grid-template-columns:  1fr;
-        grid-template-rows: .5fr auto auto;
-        grid-template-areas: 
-            "..."
-            "text-area"
-            "call-to-action";
-    
-        gap: 0;
-        margin-left: 40vw;
-    }
-    
-    .button-size {
-        display: inline-block;
-        text-align: center;
-        border-radius: .2em;
-    }
-}
+
 
 @media (min-width: 700px) and (max-width: 900px){
 
@@ -121,5 +96,44 @@
     .hero-section-background-3-mobile--position-left {
         background-position-x: -190px;
         height: 100vh;
+    }
+}
+
+/* ABOUT US SECTION */
+@media (max-width: 900px) {
+    .our-story-section {
+        flex-direction: column;
+    }
+
+    .our-story__image {
+        margin: 0 auto;
+        max-width: 200px;
+        max-height: 300px;
+    }
+
+    .about-us-title {
+        padding: 1em;
+    }
+    
+    .our-story__heading {
+        margin: 0;
+        padding-bottom: .5em;
+    }
+    .our-story-section__text {
+        padding-right: 1em;
+    }
+
+    .our-story__heading, .our-story-section__text {
+        margin-left: 0;
+    }
+}
+
+/*========================================= CONTACT PAGE =============================================*/
+
+@media (max-width: 500px)
+{
+    .image--adjustment-small {
+        max-width: 100%;
+        height: auto;
     }
 }
